--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "dotenv": "^8.2.0",
     "ejs": "^3.1.3",
+    "env": "0.0.2",
     "express": "^4.17.1",
     "nodemon": "^2.0.4",
     "pg": "^8.3.0",
