--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "ejs": "^3.1.3",
     "env": "0.0.2",
     "express": "^4.17.1",
+    "method-override": "^3.0.0",
     "nodemon": "^2.0.4",
     "pg": "^8.3.0",
     "superagent": "^5.3.1"
